--- a/templates/include/_nav.html.twig
+++ b/templates/include/_nav.html.twig
@@ -32,6 +32,8 @@
                         <li><hr class="dropdown-divider"></li>
                     </ul>
                 </li>
+                <li class="nav-item ns-5">
+                    <a class="nav-link text-danger ns-5" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
             </ul>
         </div>
     </div>
